--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,28 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId> org.springframework.data </groupId>
+			<artifactId> spring-data-jpa </artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId> mysql </groupId>
+			<artifactId> mysql-connector-java </artifactId>
+		</dependency>
 	</dependencies>
+
+	<repositories>
+		<repository>
+			<id> spring-libs-release </id>
+			<name> Spring Releases </name>
+			<url> https://repo.spring.io/libs-release </url>
+			<snapshots>
+				<enabled> false </enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 
 	<build>
 		<plugins>
